Restructuring Request Workflow Controllers
. Moved all common operations in request workflow controllers to a super class.
. Added CanViewRequest policy.
. Enforce CanEditRequest and CanViewRequest policies.
. Added EnableSSL configuration parameter.
. Fixed a bug in AddAccess.

--- a/PAM/Views/AddAccessRequest/SystemsToAdd.cshtml
+++ b/PAM/Views/AddAccessRequest/SystemsToAdd.cshtml
@@ -69,7 +69,7 @@
 <partial name="/Views/Shared/ProgressBars/AddAccess.cshtml" />
 
 <p>Please select the systems you want to add:</p>
-<form asp-action="SystemsToRemove" method="post">
+<form asp-action="SystemsToAdd" method="post">
   <div class="card mt-3">
     <div class="card-header">Systems To Add</div>
     <div class="card-body">
