--- a/PAM/Views/System/Systems.cshtml
+++ b/PAM/Views/System/Systems.cshtml
@@ -30,6 +30,7 @@
       <th class="d-none d-lg-table-cell">Description</th>
       <th class="d-none d-md-table-cell">Owner</th>
       <th class="d-none d-md-table-cell">Processing Unit</th>
+      <th class="d-none d-md-table-cell">Forms</th>
       <th></th>
     </tr>
   </thead>
@@ -43,6 +44,7 @@
         <td class="d-none d-lg-table-cell">@system.Description</td>
         <td class="d-none d-md-table-cell">@system.Owner</td>
         <td class="d-none d-md-table-cell">@system.ProcessingUnit?.Name</td>
+        <td class="d-none d-md-table-cell">@system.Forms.Count</td>
         <td>
           <a asp-action="EditSystem" asp-route-id="@system.SystemId" class="btn btn-primary">
             <i class="fas fa-edit"></i>
