Additional audit log code

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="administrationMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Administration</a>
             <div class="dropdown-menu" aria-labeled by="administrationMenu">
               <a class="dropdown-item" asp-controller="Employee" asp-action="Employees">Users</a>
-              <a class="dropdown-item" asp-controller="AuditLog" asp-action="ViewLog">Audit Log</a>
+              <a class="dropdown-item" asp-controller="AuditLog" asp-action="SearchLog">Audit Log</a>
             </div>
           </li>
         }
