--- a/PAM/Views/System/EditSystem.cshtml
+++ b/PAM/Views/System/EditSystem.cshtml
@@ -44,6 +44,12 @@
     </div>
   </div>
   <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="addSystem">Add System</label>
+      <input id="addSystem" type="text" class="form-control" placeholder="Search systems by name or description">
+    </div>
+  </div>
+  <div class="form-row">
     <div class="col-6">
       <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove System</a>
     </div>
