--- a/PAM/Views/System/EditSystem.cshtml
+++ b/PAM/Views/System/EditSystem.cshtml
@@ -45,8 +45,29 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="addSystem">Add System</label>
-      <input id="addSystem" type="text" class="form-control" placeholder="Search systems by name or description">
+      <label for="addForm">Add Form</label>
+      <input id="addForm" type="text" class="form-control" placeholder="Search forms by name or description">
+    </div>
+  </div>
+  <div class="card mt-3 mb-3">
+    <div class="card-header">Forms</div>
+    <div class="card-body">
+      <table class="table table-hover">
+        <thead><tr><th>Id</th><th>Name</th><th class="d-none d-md-table-cell">Description</th><th></th></tr></thead>
+        <tbody id="forms">
+          @foreach (var form in Model.Forms)
+          {
+            <tr data-form-id="@form.FormId">
+              <td>@form.FormId</td>
+              <td>@form.Form.Name</td>
+              <td class="d-none d-md-table-cell">@form.Form.Description</td>
+              <td>
+                <button class="btn btn-danger delSystem"><i class="fas fa-trash-alt"></i></button>
+              </td>
+            </tr>
+          }
+        </tbody>
+      </table>
     </div>
   </div>
   <div class="form-row">
