--- a/PAM/Views/System/EditSystem.cshtml
+++ b/PAM/Views/System/EditSystem.cshtml
@@ -62,7 +62,7 @@
               <td>@form.Form.Name</td>
               <td class="d-none d-md-table-cell">@form.Form.Description</td>
               <td>
-                <button class="btn btn-danger delSystem"><i class="fas fa-trash-alt"></i></button>
+                <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
               </td>
             </tr>
           }
