--- a/PAM/Views/System/AddSystem.cshtml
+++ b/PAM/Views/System/AddSystem.cshtml
@@ -27,8 +27,8 @@
       <input asp-for="Owner" type="text" class="form-control">
     </div>
     <div class="form-group col-md-6">
-      <label asp-for="ProcessingUnitId" class="form-label">Processing Unit</label>
-      <select asp-for="ProcessingUnitId" class="form-control" asp-items="ViewBag.processingUnits">
+      <label asp-for="SupportUnitId" class="form-label">Support Unit</label>
+      <select asp-for="SupportUnitId" class="form-control" asp-items="ViewBag.supportUnits">
         <option value="">- NONE -</option>
       </select>
     </div>
