--- a/PAM/Views/System/ViewSystem.cshtml
+++ b/PAM/Views/System/ViewSystem.cshtml
@@ -20,5 +20,5 @@
   <tr><th>Name</th><td>@Model.Name</td></tr>
   <tr><th>Description</th><td>@Model.Description</td></tr>
   <tr><th>Owner</th><td>@Model.Owner</td></tr>
-  <tr><th>Processing Unit</th><td>@Model.ProcessingUnit?.Name</td></tr>
+  <tr><th>Support Unit</th><td>@Model.SupportUnit?.Name</td></tr>
 </table>
