Fixed forms saving properly when edit system. Fixed proper newvalue being saved when remove system

--- a/PAM/Views/System/EditSystem.cshtml
+++ b/PAM/Views/System/EditSystem.cshtml
@@ -102,6 +102,7 @@
               <td>@form.Form.Name</td>
               <td>
                 <button class="btn btn-danger float-right delForm"><i class="fas fa-trash-alt"></i></button>
+                <input type="hidden" name="formIds" value="@form.FormId">
               </td>
             </tr>
           }
