--- a/PAM/Views/Form/Forms.cshtml
+++ b/PAM/Views/Form/Forms.cshtml
@@ -28,7 +28,7 @@
       <th>ID</th>
       <th class="d-none d-md-table-cell text-nowrap">Name</th>
       <th class="d-none d-sm-table-cell">Display Order</th>
-
+      <th class="d-none d-sm-table-cell">DownLoad</th>
       @if ((await AuthorizationService.AuthorizeAsync(User, "IsAdmin")).Succeeded)
       {
         <th></th>
@@ -40,12 +40,17 @@
     {
       <tr>
         <td>
-          <a asp-action="ViewForm" asp-route-id="@Form.FormId">@Form.FormId</a>
+          <a asp-action="DetailsForm" asp-route-id="@Form.FormId">@Form.FormId</a>
         </td>
 
         <td class="d-none d-sm-table-cell">@Form.Name</td>
         <td class="d-none d-sm-table-cell">@Form.DisplayOrder</td>
-
+        <td>
+          <a asp-action="DownloadForm" asp-route-id="@Form.FormId" class="btn btn-primary">
+            <i class="fas fa-arrow-circle-down"></i>
+            <span class="d-none d-md-inline"></span>
+          </a>
+        </td>
         @if ((await AuthorizationService.AuthorizeAsync(User, "IsAdmin")).Succeeded)
         {
           <td>
