--- a/PAM/Views/Form/AddForm.cshtml
+++ b/PAM/Views/Form/AddForm.cshtml
@@ -14,7 +14,7 @@
     </ol>
   </nav>
 
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     <div class="form-row">
       <div class="form-group col-md-6">
         <label asp-for="Name">Name</label>
@@ -42,6 +42,10 @@
         <input asp-for="ForContractorOnly" class="form-check-input" type="checkbox">
         <label asp-for="ForContractorOnly" class="form-check-label">Contractors Only</label>
       </div>
+    </div>
+
+    <div class="form-group col-md-6">
+      <input asp-for="File" type="file" name="file" required>
     </div>
 
     <div class="form-row">
