--- a/PAM/Views/Form/EditForm.cshtml
+++ b/PAM/Views/Form/EditForm.cshtml
@@ -32,13 +32,12 @@
 
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label asp-for="DisplayOrder">Description</label>
+      <label asp-for="DisplayOrder">Display Order</label>
       <input asp-for="DisplayOrder" type="text" class="form-control" required>
     </div>
     <div class="form-group col-md-6">
-      <a asp-action="Upload" asp-route-id="@Model.FormId" class="btn btn-primary">
-        <span class="d-none d-md-inline">Re-Upload PDF</span>
-      </a>
+      <label>Re-UploadFile</label>
+      <input type="file"  required>
     </div>
   </div>
 
