--- a/PAM/Views/Form/Forms.cshtml
+++ b/PAM/Views/Form/Forms.cshtml
@@ -46,7 +46,7 @@
         <td class="d-none d-sm-table-cell">@Form.Name</td>
         <td class="d-none d-sm-table-cell">@Form.DisplayOrder</td>
         <td>
-          <a asp-action="DownloadForm" asp-route-id="@Form.FormId" class="btn btn-primary">
+          <a asp-action="Download" asp-route-id="@Form.FormId" class="btn btn-primary">
             <i class="fas fa-arrow-circle-down"></i>
             <span class="d-none d-md-inline"></span>
           </a>
