Some minor text and db script changes

--- a/PAM/Views/SupportUnit/EditSupportUnit.cshtml
+++ b/PAM/Views/SupportUnit/EditSupportUnit.cshtml
@@ -90,7 +90,7 @@
       });
     });
     function confirmRemoval() {
-      var msg = "Are you sure you want to remove this processing unit?";
+      var msg = "Are you sure you want to remove this support unit?";
       if (confirm(msg))
         window.location.href = "@Context.Request.PathBase/SupportUnit/RemoveSupportUnit/@Model.SupportUnitId";
     }
