--- a/PAM/Views/SupportUnit/AddSupportUnit.cshtml
+++ b/PAM/Views/SupportUnit/AddSupportUnit.cshtml
@@ -103,7 +103,7 @@
     </div>
   </div>
   <div class="card mt-3 mb-3">
-    <div class="card-header">Employees</div>
+    <div class="card-header">Systems</div>
     <div class="card-body">
       <table class="table table-hover">
         <thead><tr><th>Id</th><th>Name</th><th class="d-none d-md-table-cell">Description</th><th></th></tr></thead>
