--- a/PAM/Views/Shared/ProgressBars/AddAccess.cshtml
+++ b/PAM/Views/Shared/ProgressBars/AddAccess.cshtml
@@ -12,6 +12,9 @@
     <li class="step" data-title="Additional Information">
       <a class="d-none d-md-inline" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]">Additional Information</a>
     </li>
+    <li class="step" data-title="Forms">
+      <a class="d-none d-md-inline" asp-action="Forms" asp-route-id="@ViewData["id"]">Forms</a>
+    </li>
     <li class="step" data-title="Signatures">
       <a class="d-none d-md-inline" asp-action="Signatures" asp-route-id="@ViewData["id"]">Signature(s) Required</a>
     </li>
