--- a/PAM/Views/Shared/RequestPartials/_Forms.cshtml
+++ b/PAM/Views/Shared/RequestPartials/_Forms.cshtml
@@ -8,7 +8,7 @@
 <form asp-action="Forms" enctype="multipart/form-data" method="post">
   @if (!requiredForms.Any())
   {
-    <p>No additional form required for the systems requested.</p>
+    <p>No additional form(s) required for the requested system(s).</p>
   }
   @if (requiredForms.Any())
   {
