--- a/PAM/Views/Form/EditForm.cshtml
+++ b/PAM/Views/Form/EditForm.cshtml
@@ -14,11 +14,11 @@
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Edit @Model.Name</li>
+    <li class="breadcrumb-item active" aria-current="page"> @Model.Name</li>
   </ol>
 </nav>
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label asp-for="Name" class="form-label">Name</label>
@@ -37,7 +37,7 @@
     </div>
     <div class="form-group col-md-6">
       <label>Re-UploadFile</label>
-      <input type="file"  required>
+      <input asp-for="File" type="file"  name="file" >
     </div>
   </div>
 
@@ -73,7 +73,7 @@
   </div>
   <div class="form-row">
     <div class="col-6">
-      <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove Processing Unit</a>
+      <a href="javascript:confirmRemoval()" class="btn btn-danger">Remove Form</a>
     </div>
     <div class="col-6 text-right">
       <button type="submit" class="btn btn-primary">Save</button>
