--- a/PAM/Views/Shared/RequestPartials/_Forms.cshtml
+++ b/PAM/Views/Shared/RequestPartials/_Forms.cshtml
@@ -22,16 +22,16 @@
       <tbody>
         @foreach (var form in requiredForms)
         {
-        <tr>
-          <td>
-            <a asp-controller="Files" asp-action="DownloadFile" asp-route-id="@form.FormId"><i class="fas fa-download"></i></a>
-            @form.Name
-          </td>
-          <td>
-            <div class="form-group">
-              <input type="file" class="form-control-file" name="completedFiles" id="uploadFile" value="@Model.Forms.">
-            </div>
-        </tr>
+          <tr>
+            <td>
+              <a asp-controller="Files" asp-action="DownloadFile" asp-route-id="@form.FormId"><i class="fas fa-download"></i></a>
+              @form.Name
+            </td>
+            <td>
+              <div class="custom-file">
+                  <input type="file" name="completedFiles" id="uploadFile" />
+              </div>
+          </tr>
         }
       </tbody>
     </table>
