--- a/PAM/Views/Form/DetailsForm.cshtml
+++ b/PAM/Views/Form/DetailsForm.cshtml
@@ -55,5 +55,13 @@
         </tbody>
       </table>
     }
+
   </div>
+
+</div>
+<div class="text-right">
+  <a asp-action="Download" asp-route-id="@Model.FormId" class="btn btn-primary">
+    <i class="fas fa-arrow-circle-down">DownLoad Form</i>
+    <span class="d-none d-md-inline"></span>
+  </a>
 </div>
