styling fixes & display condition for no signatures

--- a/PAM/Views/Account/Welcome.cshtml
+++ b/PAM/Views/Account/Welcome.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-  <h1 class="display-4 text-center"> Welcome to Probation Access Manager (PAM) </h1>
+  <h1 class="display-4 text-center"> Probation Access Manager</br>(PAM) </h1>
   <hr>
   <p>
     Veniam commodo quis ex eiusmod cupidatat duis nisi ea ex tempor proident. Consectetur
