--- a/PAM/Views/Profile/ViewProfile.cshtml
+++ b/PAM/Views/Profile/ViewProfile.cshtml
@@ -10,14 +10,14 @@
   </ol>
 </nav>
 
-<p class="text-right"><a asp-action="EditProfile" class="btn btn-primary">Edit Profile</a></p>
+<div><a asp-action="EditProfile" class="btn btn-primary float-right mr-2">Edit Profile</a></div>
 
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs ml-2 mr-2">
   <li class="nav-item">
     <a class="nav-link active" data-toggle="tab" href="#account">Employee Info</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#access">System Acsess</a>
+    <a class="nav-link" data-toggle="tab" href="#access">System Access</a>
   </li>
 </ul>
 
