--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -12,7 +12,7 @@
   </ol>
 </nav>
 
-<div><a asp-action="CreateRequest" class="btn btn-primary float-right">New Request</a></div>
+<div><a asp-action="CreateRequest" class="btn btn-primary float-right mr-2">New Request</a></div>
 
 @if (!allRequests.Any())
 {
@@ -21,7 +21,7 @@
 
 @if (allRequests.Any())
 {
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs ml-2 mr-2">
     @if (draftRequests.Any())
     {
       <li class="nav-item">
