--- a/PAM/Views/Review/MyReviews.cshtml
+++ b/PAM/Views/Review/MyReviews.cshtml
@@ -18,7 +18,7 @@
 
 @if (allReviews.Any())
 {
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs ml-2 mr-2">
     @if (currentReviews.Any())
     {
       <li class="nav-item">
