login style change

--- a/PAM/Views/Employee/ViewEmployee.cshtml
+++ b/PAM/Views/Employee/ViewEmployee.cshtml
@@ -11,14 +11,14 @@
   </ol>
 </nav>
 
-<p class="text-right"><a asp-action="EditEmployee" asp-route-id="@Model.EmployeeId" class="btn btn-primary">Edit User</a></p>
+<a asp-action="EditEmployee" asp-route-id="@Model.EmployeeId" class="btn btn-primary float-right mr-2">Edit User</a>
 
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs ml-2 mr-2">
   <li class="nav-item">
     <a class="nav-link active" data-toggle="tab" href="#account">Employee Info</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="tab" href="#access">System Acsess</a>
+    <a class="nav-link" data-toggle="tab" href="#access">System Access</a>
   </li>
 </ul>
 
