--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -12,7 +12,7 @@
   </ol>
 </nav>
 
-<div><a asp-action="CreateRequest" class="btn btn-primary float-right mr-2">New Request</a></div>
+<a asp-action="CreateRequest" class="btn btn-primary float-right mr-2">New Request</a>
 
 @if (!allRequests.Any())
 {
