--- a/PAM/Views/Profile/ViewProfile.cshtml
+++ b/PAM/Views/Profile/ViewProfile.cshtml
@@ -10,7 +10,7 @@
   </ol>
 </nav>
 
-<div><a asp-action="EditProfile" class="btn btn-primary float-right mr-2">Edit Profile</a></div>
+<a asp-action="EditProfile" class="btn btn-primary float-right mr-2">Edit Profile</a>
 
 <ul class="nav nav-tabs ml-2 mr-2">
   <li class="nav-item">
