--- a/PAM/wwwroot/css/login.css
+++ b/PAM/wwwroot/css/login.css
@@ -1,14 +1,21 @@
-﻿/*----------------------------------------------------------
+﻿    
+/*----------------------------------------------------------
     [ Background for Login ]
 */
+body {
+  background-color: #19547b;
+}
 .bg-display {
- background-image: url("../images/LAsky.png");
-  background-color: #d9e4f5;
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
+  background-image: url("../images/losangeles.jpg");
+  width: 100%;
+  min-height: 100vh;
+  justify-content: flex-end;
+  display: flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
 }
 
 /*----------------------------------------------------------
@@ -32,8 +39,7 @@
   border-radius: 10px;
   overflow: hidden;
   padding: 55px 55px 10px 55px;
-  border-radius: 50px 50px 50px 50px;
-  background: linear-gradient(to bottom, #434343 0%, #434343 100%);
+  background: linear-gradient(to bottom, #434343 0%, #000000 100%);
   background: -webkit-linear-gradient(to bottom, #434343 0%, #000000 100%);
 }
 
