--- a/PAM/Views/Employee/ViewEmployee.cshtml
+++ b/PAM/Views/Employee/ViewEmployee.cshtml
@@ -11,9 +11,9 @@
   </ol>
 </nav>
 
-<a asp-action="EditEmployee" asp-route-id="@Model.EmployeeId" class="btn btn-primary float-right mr-2">Edit User</a>
+<a asp-action="EditEmployee" asp-route-id="@Model.EmployeeId" class="btn btn-primary float-right">Edit User</a>
 
-<ul class="nav nav-tabs ml-2 mr-2">
+<ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" data-toggle="tab" href="#account">Employee Info</a>
   </li>
