--- a/PAM/Views/Profile/ViewProfile.cshtml
+++ b/PAM/Views/Profile/ViewProfile.cshtml
@@ -10,9 +10,9 @@
   </ol>
 </nav>
 
-<a asp-action="EditProfile" class="btn btn-primary float-right mr-2">Edit Profile</a>
+<a asp-action="EditProfile" class="btn btn-primary float-right">Edit Profile</a>
 
-<ul class="nav nav-tabs ml-2 mr-2">
+<ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" data-toggle="tab" href="#account">Employee Info</a>
   </li>
