--- a/PAM/Views/Shared/ProgressBars/PortfolioAssignment.cshtml
+++ b/PAM/Views/Shared/ProgressBars/PortfolioAssignment.cshtml
@@ -13,7 +13,7 @@
       <a class="d-none d-md-inline" asp-action="Forms" asp-route-id="@ViewData["id"]">Additional Forms</a>
     </li>
     <li class="step" data-title="Signatures">
-      <a class="d-none d-md-inline" asp-action="Signatures" asp-route-id="@ViewData["id"]">Signature(s) Required</a>
+      <a class="d-none d-md-inline" asp-action="Signatures" asp-route-id="@ViewData["id"]">Signatures Required</a>
     </li>
     <li class="step" data-title="Summary">
       <a class="d-none d-md-inline" asp-action="Summary" asp-route-id="@ViewData["id"]">Summary</a>
