--- a/PAM/Views/Shared/RequestPartials/_SignaturesSummary.cshtml
+++ b/PAM/Views/Shared/RequestPartials/_SignaturesSummary.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
   <div class="card-header">
-    Signature(s) Required
+    Signatures Required
     <a class="float-right" asp-action="Signatures" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
   <div class="card-body">
